# SPEAKEASY

./: .gitignore  README.md
android_sms_plugin_template/: README.md
android_sms_plugin_template/app/src/main/: AndroidManifest.xml
backend/: .env.example  Cargo.toml  cargo_output.txt
backend/migrations/: 001_init.sql  002_add_attachment_ciphertext.sql
backend/src/: auth.rs  errors.rs  main.rs  state.rs
backend/src/routes/: attachments.rs  auth_routes.rs  devices.rs  keys.rs  messages.rs  mod.rs  safety.rs
docs/: AbusePolicy.md  AppStoreComplianceNotes.md  BUILD_PLAN.md  CryptoSpec.md  DataRetention.md  HANDOFF_TO_ALEX.md  LoggingPolicy.md  PrivacyPolicy.md  ProductSpec.md  TermsOfService.md  ThreatModel.md  handover_report.md
infra/: docker-compose.yml
mobile/android/: settings.gradle
mobile/android/crypto/: KeystoreStore.kt  SignalClient.kt  SignalStoreAdapter.kt  SignalStores.kt  TestApplication.kt  build.gradle
mobile/android/crypto/vault/: AttachmentCrypto.kt  VaultFileStore.kt  VaultIndexDb.kt  VaultKeyManager.kt  VaultModels.kt  VaultTestRunner.kt
mobile/ios/SpeakeasyCrypto/: KeychainStore.swift  Package.swift  RoundtripRunner.swift  SignalClient.swift  SignalStoreAdapter.swift  SignalStores.swift
mobile/ios/SpeakeasyCrypto/Vault/: AttachmentCrypto.swift  VaultFileStore.swift  VaultIndexDb.swift  (+3 more)
mobile_template/: pubspec.yaml
mobile_template/lib/: main.dart
mobile_template/lib/src/: app.dart  routes.dart
openapi/: openapi.yaml
scripts/: init_flutter_project.sh
tests/: smoke_test.ps1
web/: README.md  package.json
(+10 files in other folders)
